<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="4dp"
                android:paddingTop="10dp"
                android:text="@string/wellness_diary_report_instructions"
                android:textColor="#ffffff"
                android:textSize="16sp" />
            <include android:id="@+id/wellness_activity_report_odls_header" layout="@layout/section_header" />
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                    <CheckBox
                        android:id="@+id/wellness_activity_report_energy_checkbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/energy" />
                    <CheckBox
                        android:id="@+id/wellness_activity_report_happiness_checkbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/happiness" />
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                    <CheckBox
                        android:id="@+id/wellness_activity_report_comfort_checkbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/comfort" />
                    <CheckBox
                        android:id="@+id/wellness_activity_report_mobility_checkbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mobility" />
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                    <CheckBox
                        android:id="@+id/wellness_activity_report_appetite_checkbox"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/appetite" />
                </TableRow>
            </TableLayout>
            <include android:id="@+id/wellness_activity_report_timeframe_header" layout="@layout/section_header" />
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp" >
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="3dp"
                        android:text="@string/from" />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="3dp"
                        android:text="@string/to" />
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                    <Button
                        android:id="@+id/wellness_activity_report_from_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--/--/----" />
                    <Button
                        android:id="@+id/wellness_activity_report_to_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--/--/----" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom" >
            <Button
                android:id="@+id/wellness_activity_report_generate_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate" />
            <Button
                android:id="@+id/wellness_activity_report_cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
